test/errors/library-warning-rollup/build.ts
import { runAngularPackageBuilder } from '../../..';

runAngularPackageBuilder( [
	'test/warnings/library-warning-rollup/.angular-package.json'
] ).catch( ( error: Error ) => {
	// Do nothing
} );
